# pymbrola

./: .buildinfo  .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  api.md  conf.py  genindex.html  index.html  index.rst  main.py  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  documentation.yml  publish.yml  pylint.yml  pytest.yml  testing.yml
docs/: Makefile  conf.py  contributing.rst  index.md  index.rst  installation.rst  license.rst  make.bat  mbrola.rst  modules.rst  requirements.txt
docs/api/: core.rst  index.rst
docs/examples/: index.rst
docs/source/: conf.py  index.md  index.rst  modules.rst  src.rst
docs/user_guide/: index.rst  pitch-contours.rst  trouble_shooting.rst  usage.rst
mbrola/: __about__.py  install.py  mbrola.py  utils.py
src/: __init__.py  mbrola.py  utils.py
src/mbrola/: __about__.py  install.sh  mbrola.py  utils.py
src/mbrola.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pymbrola/: __about__.py  install.py  mbrola.py
tests/: test_mbrola.py  test_utils.py  test_validations.py
