[project]
name = "mbrola"
version = "0.2.6"
description = "A Python front-end for the MBROLA speech synthesizer"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Gonzalo García-Castro", email = "gongarciacastro@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = ["pytest>=8.3.5", "pytest-cov>=7.1.0"]

[project.urls]
Documentation = "https://github.com/gongcastro/pymbrola#readme"
Issues = "https://github.com/gongcastro/pymbrola/issues"
Source = "https://github.com/gongcastro/pymbrola"

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mbrola"]

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/"
publish-url = "https://pypi.org/"
explicit = true
package = true

[tool.pytest]
addopts = ["--maxfail=1", "--cov=mbrola", "--cov-report term"]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.12.9"]
