[project]
name = "mbrola"
version = "0.3.8"
description = "A Python front-end for the MBROLA speech synthesizer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mbbrola", "speech synthesis", "python"]
authors = [
  { name = "Gonzalo García-Castro", email = "gongarciacastro@gmail.com" },
]
classifiers = [
  "Natural Language :: English",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Development Status :: 4 - Beta",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = ["myst-parser>=4.0.1"]


[project.optional-dependencies]
test = ["pytest>=8.3.5", "pytest-cov>=7.1.0"]
lint = ["ruff>=0.12.9", "ty>=0.0.37"]
docs = ["sphinx-gallery>=0.21.0"]
[dependency-groups]
dev = [
  "pydata-sphinx-theme>=0.17.1",
  "pytest>=8.3.5",
  "pytest-cov>=7.1.0",
  "ruff>=0.12.9",
  "sphinx-gallery>=0.21.0",
  "ty>=0.0.37",
]

[project.urls]
Documentation = "https://github.com/gongcastro/pymbrola#readme"
Issues = "https://github.com/gongcastro/pymbrola/issues"
Source = "https://github.com/gongcastro/pymbrola"

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mbrola"]

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/"
publish-url = "https://pypi.org/"
explicit = true
package = true

[tool.pytest]
addopts = ["--maxfail=1", "--cov=mbrola", "--cov-report=term-missing"]
testpaths = ["tests"]
